test_suite/tests/ui/structure/slice_type.stderr
error: mapping over slice type is not supported
 --> tests/ui/structure/slice_type.rs:4:16
  |
4 | struct Test<T>([T]);
  |                ^^^
